# pge_plots

./: .gitignore  LICENSE.md  README.md  mise.toml  pge_plots.py  pyproject.toml
data/: pge_electric_usage_interval_data_Service 1_1_2023-12-19_to_2024-12-19.csv
