[project]
name = "pge-heatmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=24.10.0",
    "duckdb>=1.1.3",
    "fsspec>=2024.12.0",
    "meteostat>=1.6.8",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "python-levenshtein>=0.26.1",
    "ruff>=0.8.4",
    "sqlalchemy_mate>=1.4.28.3,<2.0.0.0",
    "streamlit>=1.41.1",
    "uszipcode>=1.0.1",
]
